fix picture distort in dark mode

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,5 +1,8 @@
 .dark-mode{
-  filter: invert(100%);
+  filter: invert(1) hue-rotate(180deg);
+}
+.invert{
+  filter: invert(1) hue-rotate(180deg);
 }
 html,body{
     background-attachment: fixed;
